[package]
name = "btclib"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.6"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
sha256 = "1.5.0"
spki = { version = "0.7.3", features = ["pem"] }
thiserror = "1.0.65"
tokio = { version = "1.41.1", features = ["net"] }
uint = "0.10.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
