[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argh = "0.1.12"
btclib = { version = "0.1.0", path = "../lib"}
chrono = "0.4.38"
dashmap = "6.1.0"
static_init = "1.0.3"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
