[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
cursive = "0.21.1"
futures = "0.3.31"
kanal = "0.1.0-pre8"
serde = { version = "1.0.215", features = ["derive"] }
text-to-ascii-art = "0.1.10"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
btclib = { version = "0.1.0", path = "../lib" }
toml = "0.8.19"
ascii-art = "0.1.0"
